[package]

name = "unicode-width"
version = "0.1.12"
authors = [
    "kwantam <kwantam@gmail.com>",
    "Manish Goregaokar <manishsmail@gmail.com>",
]

homepage = "https://github.com/unicode-rs/unicode-width"
repository = "https://github.com/unicode-rs/unicode-width"
license = "MIT OR Apache-2.0"
categories = [
    "command-line-interface",
    "internationalization",
    "no-std::no-alloc",
    "text-processing",
]
keywords = ["text", "width", "unicode"]
readme = "README.md"
description = """
Determine displayed width of `char` and `str` types
according to Unicode Standard Annex #11 rules.
"""
edition = "2021"

exclude = ["/.github/*", "/target/*", "/Cargo.lock"]

[dependencies]
unicode-segmentation = { version = "1.11.0", optional = true }

compiler_builtins = { version = "0.1", optional = true }
core = { version = "1.0", package = "rustc-std-workspace-core", optional = true }
std = { version = "1.0", package = "rustc-std-workspace-std", optional = true }

[features]
display = ["dep:unicode-segmentation"]
rustc-dep-of-std = ["dep:compiler_builtins", "dep:core", "dep:std"]

# Legacy, now a no-op
no_std = []

[package.metadata.docs.rs]
features = ["display"]
rustdoc-args = ["--cfg", "docsrs"]
